node-7/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Tue Aug 19 11:41:06 2014
*raw
:PREROUTING ACCEPT [2961:37770610]
:OUTPUT ACCEPT [2861:950227]
-A PREROUTING -p gre -m comment --comment "333 accept gre" -j NOTRACK 
COMMIT
# Completed on Tue Aug 19 11:41:06 2014
# Generated by iptables-save v1.4.7 on Tue Aug 19 11:41:06 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -m comment --comment "000 accept all icmp requests" -j ACCEPT 
-A INPUT -i lo -m comment --comment "001 accept all to lo interface" -j ACCEPT 
-A INPUT -m comment --comment "002 accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.16.0.2/32 -p tcp -m multiport --sports 4369,5672,41055,55672,61613 -m comment --comment "003 remote rabbitmq " -j ACCEPT 
-A INPUT -p tcp -m multiport --sports 8140 -m comment --comment "004 remote puppet " -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6800:7100 -m comment --comment "011 ceph-osd allow" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 22 -m comment --comment "020 ssh" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 80,443 -m comment --comment "100 http" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 3306,3307,4567,4568 -m comment --comment "101 mysql" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 5000,35357 -m comment --comment "102 keystone" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 8080,6000,6001,6002 -m comment --comment "103 swift" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 9292,9191,8773 -m comment --comment "104 glance" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 8774,8775,8776,6080 -m comment --comment "105 nova " -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 4369,5672,5673,41055 -m comment --comment "106 rabbitmq " -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 11211 -m comment --comment "107 memcached tcp" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 11211 -m comment --comment "107 memcached udp" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 873 -m comment --comment "108 rsync" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 3260 -m comment --comment "109 iscsi " -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 9696 -m comment --comment "110 neutron " -j ACCEPT 
-A INPUT -p udp -m multiport --ports 67 -m comment --comment "111 dhcp-server" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 53 -m comment --comment "111 dns-server" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 123 -m comment --comment "112 ntp-server" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 5404 -m comment --comment "113 corosync-input" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 5405 -m comment --comment "114 corosync-output" -j ACCEPT 
-A INPUT -p udp -m multiport --ports 58882 -m comment --comment "115 openvswitch db" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 5666 -m comment --comment "116 nrpe-server" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 16509 -m comment --comment "117 libvirt" -j ACCEPT 
-A INPUT -s 192.168.0.0/24 -p tcp -m multiport --ports 5900:6100 -m comment --comment "118 vnc ports" -j ACCEPT 
-A INPUT -p tcp -m multiport --ports 8777 -m comment --comment "119 ceilometer" -j ACCEPT 
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m comment --comment "999 drop all other requests" -j DROP 
COMMIT
# Completed on Tue Aug 19 11:41:06 2014
